# congee

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.perf  LICENSE  README.md  analyze_perf.py  codecov.yml  congee_flat.md  flake.nix
.clusterfuzzlite/: Dockerfile  build.sh
.git-hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_cron.yml  ci.yml  shumai_converter.py
bench/: README.md  basic.rs  benchmark.toml  compact_set.rs  flat_comparison.rs  node_size.rs  scan.rs
dev/bench/: data.js
examples/: bench_workload_test.rs  compact_test.rs  fb_child_as_struct.rs  fb_test.rs  fb_test_2.rs  size_test.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: btree_check.rs  compact_set_check.rs  fuzz_target_1.rs  insert_scan.rs
scripts/: analyze_results.py
src/: base_node.rs  child_ptr.rs  congee.rs  congee_arc.rs  congee_compact.rs  congee_compact_set.rs  congee_compact_v2.rs  congee_flat.fbs  congee_flat.rs  congee_flat_generated.rs  congee_flat_struct.fbs  congee_flat_struct.rs  congee_flat_struct_generated.rs  congee_inner.rs  congee_raw.rs  congee_set.rs  error.rs  key.rs  lib.rs  lock.rs  node.rs  node_16.rs  node_256.rs  node_4.rs  node_48.rs  node_lock.rs  node_ptr.rs  range_scan.rs  stats.rs  tree.rs  utils.rs
src/nodes/: base_node.rs  mod.rs  node_16.rs  node_256.rs  node_4.rs  node_48.rs  node_ptr.rs
src/tests/: alloc.rs  memory_stats.rs  mod.rs  scan.rs  tree.rs
tests/: art_usize.rs  scan.rs  tree.rs
