[package]
name = "congee"
version = "0.4.1"
edition = "2024"
description = "A Rust implementation of ART-OLC concurrent adaptive radix tree."
keywords = ["ART", "adaptive-radix-tree", "concurrent"]
repository = "https://github.com/XiangpengHao/congee"
readme = "README.md"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.18"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
rand = "0.8.5"
shumai = "0.2.16"
serde = "1.0.219"
serde_json = "1.0.140"
flurry = "0.5.2"
dashmap = "6.1.0"
mimalloc = { version = "0.1.46", default-features = false }
selfsimilar = "0.1.0"
shuttle = "0.8.0"
ahash = "0.8.11"

[[bench]]
name = "basic"
path = "bench/basic.rs"
harness = false

[[bench]]
name = "scan"
path = "bench/scan.rs"
harness = false

[[bench]]
name = "node_size"
path = "bench/node_size.rs"
harness = false

[[bench]]
name = "compact_set"
path = "bench/compact_set.rs"
harness = false

[features]
flamegraph = ["shumai/flamegraph"]
perf = ["shumai/perf"]
stats = ["serde"]
access-stats = []
shuttle = []

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
